Fixed alignment and revamp ui of SelectView

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -163,12 +163,32 @@
     -fx-border-width : 1px;
 }
 
+.select-view .text-area {
+    -fx-background-color: #FFFFFF;
+    -fx-padding: 5px;
+    -fx-border-radius: 20px
+}
+
+.select-view .text-field {
+    -fx-background-color: #FFFFFF;
+    -fx-padding: 5px;
+    -fx-border-radius: 20px
+}
+
 .select-view {
-    -fx-background-color: transparent;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: black;
     -fx-border-radius: 2;
+}
+
+.select-view-label {
+    -fx-background-color: transparent;
+        -fx-font-family: "Segoe UI Light";
+        -fx-font-size: 13pt;
+        -fx-text-fill: black;
+        -fx-border-radius: 2;
+    -fx-alignment: top-right;
 }
 
 .result-display .label {
